# stm32h7xx-hal

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-0BSD.txt  README.md  RELEASING.md  build.rs  core1.x  memory.x  memory_723_725_730_733_735.x  memory_742.x  memory_743_750_753.x  memory_745_747_755_757.x  memory_7A3_7B0_7B3.x  openocd.cfg  rustfmt.toml
.cargo/: config.toml
.github/: bors.toml  force-pac-master.sh
.github/workflows/: ci.yml  clippy.yml  nightly.yml  rustfmt.yml
AS_docs/: AS_notest.txt
examples/: ITM.md  README.md  adc.rs  adc12.rs  adc12_parallel.rs  adc_dma.rs  adc_dma_circ.rs  blinky-stm32h747-disco.rs  blinky-stm32h747i-disco.rs  blinky.rs  blinky_random.rs  blinky_timer.rs  can-echo.rs  can-fd.rs  crc.rs  dac.rs  dac_adc.rs  dfsdm.rs  digital_read.rs  display-dsi-command-teartest-stm32h747i-disco.rs  display-dsi-video-stm32h747i-disco.rs  display-dsi-video-teartest-stm32h747i-disco.rs  dma.rs  embedded-graphics.rs  ethernet-nucleo-h743zi2.rs  ethernet-rtic-nucleo-h723zg.rs  ethernet-rtic-stm32h735g-dk.rs  ethernet-rtic-stm32h747i-disco.rs  ethernet-stm32h747i-disco.rs  exti_interrupt.rs  flash.rs  fmc.rs  fmc_nand_flash.rs  fractional-pll.rs  gpio_with_input.rs  i2c.rs  i2c4_bdma.rs  independent_watchdog.rs  mco.rs  mdma.rs  (+48 more)
examples/utilities/: display_primitives.rs  logger.rs  mod.rs  mpu_config.rs  power.rs  sync_unsafe_cell.rs  write.rs
examples/utilities_display/: display_primitives.rs  display_target.rs  mod.rs  write.rs
src/: adc.rs  can.rs  crc.rs  dac.rs  delay.rs  dfsdm.rs  dma.rs  dsi.rs  exti.rs  fdcan.rs  flash.rs  fmc.rs  gpio.rs  i2c.rs  independent_watchdog.rs  lib.rs  logger.rs  ltdc.rs  prelude.rs  private.rs  pwm.rs  pwr.rs  qei.rs  qspi.rs  rcc.rs  rng.rs  rtc.rs  sdmmc.rs  serial.rs  signature.rs  spi.rs  system_watchdog.rs  time.rs  timer.rs  usb_hs.rs  utils.rs  watchdog.rs
src/dma/: bdma.rs  channel.rs  dma.rs  macros.rs  mdma.rs  mod.rs  mux.rs  safe_transfer.rs  stream.rs  traits.rs  transfer.rs  utils.rs
src/dma/mux/: mod.rs  request_gen.rs  shared.rs
src/dma/stream/: config.rs  mod.rs
src/dma/transfer/: buffer.rs  config.rs  mod.rs
src/ethernet/: cache.rs  eth.rs  ksz8081r.rs  lan8742a.rs  mod.rs  packet_id.rs  raw_descriptor.rs  shared.rs
src/ethernet/ptp/: mod.rs
src/ethernet/rx/: descriptor.rs  h_descriptor.rs  mod.rs
src/ethernet/tx/: descriptor.rs  h_descriptor.rs  mod.rs
src/fdcan/: config.rs  embedded_can.rs  filter.rs  frame.rs  id.rs  interrupt.rs  message_ram.rs
src/fdcan/frame/: tests.rs
src/fdcan/message_ram/: common.rs  enums.rs  extended_filter.rs  generic.rs  rxfifo_element.rs  standard_filter.rs  txbuffer_element.rs  txevent_element.rs
src/flash/: mod.rs  operations.rs
src/gpio/: alt.rs  convert.rs  dynamic.rs  erased.rs  exti.rs  hal_02.rs  hal_1.rs  partially_erased.rs
src/gpio/alt/: h7.rs
src/ptp/: mod.rs  subseconds.rs  timestamp.rs
src/rcc/: backup.rs  core_clocks.rs  mco.rs  mod.rs  pll.rs  rec.rs  reset_reason.rs
src/sai/: dma.rs  i2s.rs  mod.rs  pdm.rs
src/serial/: dma.rs  mod.rs
src/traits/: README.md  dac.rs  i2s.rs  lcd_display.rs  mod.rs
src/xspi/: mod.rs  octospi.rs  qspi.rs
