[package]
name = "stm32h7xx-hal"
version = "0.6.0"
authors = ["Andrew Straw <strawman@astraw.com>",
           "Richard Meadows <richard@richard.fish>",
           "Henrik Böving <hargonix@gmail.com>",
           "Jan Adä <jan.adae@outlook.de>",
           "Robert Jördens <rj@quartiq.de>",
           "Florian Jung <flo@windfisch.org>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "Hardware Abstraction Layer implementation for STM32H7 series microcontrollers"
keywords = ["arm", "cortex-m", "stm32h7xx", "hal", "embedded-hal"]
license = "0BSD"
repository = "https://github.com/stm32-rs/stm32h7xx-hal"
documentation = "https://docs.rs/stm32h7xx-hal"
readme = "README.md"
exclude = [".gitignore"]

[package.metadata.docs.rs]
features = ["stm32h743", "rt", "quadspi", "sdmmc"]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
embedded-hal = "0.2.4"
cortex-m = "^0.6.2"
cortex-m-rt = "^0.6.12"
stm32h7 = "0.11.0"
void = { version = "1.0.2", default-features = false }
cast = { version = "0.2.3", default-features = false }
nb = "0.1.2"
paste = "0.1.18"
sdio-host = { version = "0.4", optional = true }

[dependencies.bare-metal]
version = "0.2.5"
features = ["const-fn"]

[dependencies.smoltcp]
version = "0.6.0"
default-features = false
features = ["ethernet", "proto-ipv4", "proto-dhcpv4", "socket-tcp", "socket-raw"]
optional = true

[dev-dependencies]
cortex-m-rtic = "0.5.3"
log = "0.4.11"
panic-halt = "0.2.0"
cfg-if = "0.1.10"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
cortex-m-log = { version = "~0.6", features = ["itm", "semihosting", "log-integration"] }
panic-itm = { version = "~0.4.1" }
panic-semihosting = { version = "0.5.3" }
cortex-m-semihosting = { version = "0.3.5" }

[dev-dependencies.smoltcp]
version = "0.6.0"
default-features = false
features = ["ethernet", "proto-ipv4", "proto-ipv6", "socket-raw"]

[features]
default = ["unproven"]
unproven = ["embedded-hal/unproven"]
device-selected = []
revision_v = []
singlecore = []
dualcore = []
dsi = []
cm4 = []
cm7 = []
quadspi = []
sdmmc = ["sdio-host"]
ethernet = ["smoltcp"]
phy_ksz8081r = []
phy_lan8742a = []
rt = ["stm32h7/rt"]
stm32h742 = ["stm32h7/stm32h743", "device-selected", "singlecore"]
stm32h743 = ["stm32h7/stm32h743", "device-selected", "singlecore"]
stm32h753 = ["stm32h7/stm32h753", "device-selected", "singlecore"]
stm32h750 = ["stm32h7/stm32h743", "device-selected", "singlecore"]
stm32h742v = ["stm32h7/stm32h743v", "device-selected", "revision_v", "singlecore"]
stm32h743v = ["stm32h7/stm32h743v", "device-selected", "revision_v", "singlecore"]
stm32h753v = ["stm32h7/stm32h753v", "device-selected", "revision_v", "singlecore"]
stm32h750v = ["stm32h7/stm32h743v", "device-selected", "revision_v", "singlecore"]
stm32h747cm7 = ["stm32h7/stm32h747cm7", "device-selected", "revision_v", "dualcore", "cm7", "dsi"]
log-itm = []
log-rtt = []
log-semihost  = []

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
lto = true # better optimizations
opt-level = "s" # optimize for binary size

[[example]]
name = "rtic"
required-features = ["rt"]

[[example]]
name = "rtic_timers"
required-features = ["rt"]

[[example]]
name = "vos0"
required-features = ["revision_v"]

[[example]]
name = "qspi"
required-features = ["quadspi"]

[[example]]
name = "sdmmc"
required-features = ["sdmmc"]

[[example]]
name = "ethernet-stm32h747i-disco"
required-features = ["phy_lan8742a", "rt", "stm32h747cm7", "ethernet"]

[[example]]
name = "ethernet-rtic-stm32h747i-disco"
required-features = ["phy_lan8742a", "rt", "stm32h747cm7", "ethernet"]

[[example]]
name = "ethernet-nucleo-h743zi2"
required-features = ["phy_lan8742a", "rt", "revision_v", "stm32h743v", "ethernet"]
